# edge_ai

./: .gitignore  README.md  Пояснительная_записка.md
esp/: README.md  host.py  quantize_mnv2.py
esp/mobilenetv2_usb/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp/mobilenetv2_usb/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
iphone/: README.md
iphone/EdgeAIiOS/EdgeAIiOS/: CameraModel.swift  CameraPreview.swift  ContentView.swift  EdgeAIiOSApp.swift  FrameClassifier.swift  Info.plist
iphone/EdgeAIiOS/EdgeAIiOS.xcodeproj/: project.pbxproj
iphone/EdgeAIiOS/EdgeAIiOS/Model/: export_coreml.py
iphone/EdgeAIiOS/EdgeAIiOS/Model/MobileNetV3Small.mlpackage/: Manifest.json
iphone/EdgeAIiOS/EdgeAIiOS/Model/MobileNetV3Small.mlpackage/Data/com.apple.CoreML/: model.mlmodel
jupyter/: README.md  edge_ai.ipynb
macbook/: README.md
macbook/EdgeAIMac/EdgeAIMac/: CameraModel.swift  CameraPreview.swift  ContentView.swift  EdgeAIMacApp.swift  FrameClassifier.swift  Info.plist
macbook/EdgeAIMac/EdgeAIMac.xcodeproj/: project.pbxproj
macbook/EdgeAIMac/EdgeAIMac/Model/: export_coreml.py
macbook/EdgeAIMac/EdgeAIMac/Model/MobileNetV3Small.mlpackage/: Manifest.json
macbook/EdgeAIMac/EdgeAIMac/Model/MobileNetV3Small.mlpackage/Data/com.apple.CoreML/: model.mlmodel
